--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,4 @@
 {
-  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin"]
+  "recommendations": ["dbaeumer.vscode-eslint", "vue.volar"],
+  "unwantedRecommendations": ["octref.vetur"]
 }
